# fastapi-project-boilerplate

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  pyrightconfig.json
alembic/: env.py
alembic/versions/: 93575672c5d2_init.py
app/: create_app.py  exceptions.py  logger.py  main.py  settings.py
app/api/: __init__.py
app/api/v1/: __init__.py  health.py  polls.py
app/db/: database.py
app/db/models/: __init__.py  poll.py
app/db/repositories/: poll.py
app/dependencies/: database.py  polls.py
app/domain/: poll.py
app/services/: poll.py
tests/: conftest.py
tests/api/: test_health.py  test_poll.py
tests/repositories/: test_poll.py
