[project]
name = "fastapi-project-boilerplate"
version = "0.1.0"
description = "Boilerplate for FastAPI projects with async SQLAlchemy and Alembic"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.5",
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.116.1",
    "gunicorn>=23.0.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "sqlalchemy[asyncio]>=2.0.43",
    "structlog>=25.4.0",
]

[dependency-groups]
dev = [
    "anyio>=4.10.0",
    "httpx>=0.28.1",
    "pre-commit>=4.3.0",
    "pyright>=1.1.404",
    "pytest>=8.4.2",
    "ruff>=0.12.10",
    "testcontainers[postgres]>=4.12.0",
]
